# something-x

./: .gitignore  DEVICES.md  LICENSE  PKGBUILD  README.md  ROADMAP.md  cliff.toml  flake.nix  main.py  pyproject.toml  requirements.txt  somethingx
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-dev.yml  release.yml
data/: style.css
docs/: RELEASING.md  docs.html  index.html
nothing_app/: __init__.py  application.py  bluetooth.py  profiles.py  protocol.py  splash.py  theme.py  tray.py  window.py
nothing_app/data/: com.something.x.omarchy.desktop  style.css
nothing_app/pages/: device.py  home.py  theme.py
tests/: conftest.py  test_bluetooth.py  test_crc.py  test_notifications.py  test_profiles.py  test_protocol.py  test_theme.py
