[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name            = "something-x"
dynamic         = ["version"]
description     = "Something X device manager for Omarchy / Linux"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
keywords        = ["nothing", "bluetooth", "gtk4", "linux", "omarchy", "ear"]

authors = [
    { name = "Raphael" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

dependencies = [
    "PyGObject>=3.42",
    "dbus-python>=1.3",
]

[project.scripts]
something-x = "nothing_app.application:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["nothing_app*"]

[tool.setuptools.package-data]
nothing_app = ["data/*.css", "data/*.desktop"]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools_scm]
# After tag v1.7.0, develop automatically produces 1.7.1.devN (N = commits since tag).
# Strips the local +gHASH so PyPI accepts the version.
version_scheme = "guess-next-dev"
local_scheme   = "no-local-version"
version_file   = "nothing_app/_version.py"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E402",  # module-level import not at top — required by gi.require_version() pattern
    "I001",  # import sort — same reason
]
